2009-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* ExecutionContext.cs: Don't use SecurityContext and don't expose
	AsyncFlowControl for NET_2_1
	* ThreadAbortException.cs: Remove ExceptionState from NET_2_1
	* Thread.cs: Don't expose ApartmentState and remove Suspend and
	Resume methods for NET_2_1
	* ThreadPool.cs: Remove GetAvailableThreads and Unsafe* methods
	for NET_2_1

2009-09-22  Jb Evain  <jbevain@novell.com>

	* Timer.cs: MONOTOUCH doesn't support remoting, so do not pass
	true to exitContext when calling WaitOne on a WaitHandle.

2009-09-22  Sebastien Pouliot  <sebastien@ximian.com>

	* Thread.cs: Remove [Get|Set]CompressedStack for NET_2_1

2009-09-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Thread.cs: Remove CurrentPrincipal property for NET_2_1
	* ExecutionContext.cs: Remove Run method for NET_2_1

2009-09-20  Sebastien Pouliot  <sebastien@ximian.com>

	* EventWaitHandle.cs: Remove AccessControl usage for NET_2_1
	* Mutex.cs: Remove some ctors and AccessControl usage for NET_2_1
	* NativeEventCalls.cs: Remove AccessControl usage for NET_2_1

2009-08-19  Jérémie Laval  <jeremie.laval@gmail.com>

	* ParallelLoopState.cs: Take in account that
	AtomicBoolean is a class.

2009-08-19  Jérémie Laval  <jeremie.laval@gmail.com>

	* AtomicBoolean.cs: Turn it into a class
	* CountdownEvent.cs: Work on cached variable. Make sure
	count doesn't go under 0.

2009-08-11  Jérémie Laval  <jeremie.laval@gmail.com>

	* Watch.cs:
	* SpinWait.cs:
	* CountdownEvent.cs:
	* CancellationToken.cs:
	* ICancelableOperation.cs:
	* CancellationTokenSource.cs:
	* CancellationTokenRegistration.cs: Add BOOTSTRAP_NET_4_0.

2009-08-11  Jérémie Laval  <jeremie.laval@gmail.com>

	* Parallel.cs: Disable While method.
	* CountdownEvent.cs: Fix method signature.
	* Barrier.cs: Moved type.
	* AggregateException.cs: Moved type.

2009-08-04 Jérémie Laval  <jeremie.laval@gmail.com>

	* SpinLock: Remove unused private methods.

2009-08-03  Zoltan Varga  <vargaz@gmail.com>
